# c_conway_gameoflife

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: gameoflife.c  gameoflife.h  gol.c  gol.h  main.c  set.c  set.h
